--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -37,7 +37,7 @@
 </div>
 
   <script>
-  const GAME_VERSION = "v1.0.11"; // 🔁 Update this as needed
+  const GAME_VERSION = "v1.0.12"; // 🔁 Update this as needed
   const showTrees = true;
   const BASE_JUMP_DURATION = 20; // Tweak this for feel
   const canvas = document.getElementById("gameCanvas");
@@ -1275,11 +1275,20 @@ document.getElementById("startGameBtn").addEventListener("click", () => {
 
   // ✅ Resume it immediately
   audioCtx.resume().then(() => {
-    console.log("✅ Audio resumed");
-    // ✅ Create the player with audioCtx
-    bunnyPlayer = createQueuedChiptunePlayer(audioCtx);
-    bunnyPlayer.queue(bunnyTheme_0, 120);
-  });
+  console.log("✅ Audio resumed");
+
+  // 🧠 iOS-specific: play a short dummy tone to enable audio output
+  const dummyOsc = audioCtx.createOscillator();
+  dummyOsc.frequency.setValueAtTime(440, audioCtx.currentTime);
+  dummyOsc.connect(audioCtx.destination);
+  dummyOsc.start();
+  dummyOsc.stop(audioCtx.currentTime + 0.01); // 10 ms tone
+
+  // Then initialize your chiptune player
+  bunnyPlayer = createQueuedChiptunePlayer(audioCtx);
+  bunnyPlayer.queue(bunnyTheme_0, 120);
+});
+
 });
 
   
