--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -59,6 +59,14 @@
   <div style="font-size: 14px; color: #aaa;">Version: <span id="versionLabel">...</span></div>
   <span id="visitorCount"></span>
 </div>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZNJFGRJ7T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-6ZNJFGRJ7T');
+</script>
 
   <script>
   const GAME_VERSION = "v1.0.16"; // 🔁 Update this as needed
